Fri May 03 14:29:58 BST 2002  Olly Betts <olly@survex.com>

	* It's HACKING (not INSTALL) that has details of developer tools.

Thu May 02 15:57:48 BST 2002  Olly Betts <olly@survex.com>

	* Removed OmData - just return and take a string instead.

Thu May 02 14:40:21 BST 2002  Olly Betts <olly@survex.com>

	* docs/.cvsignore: updated.

Thu May 02 14:38:36 BST 2002  Olly Betts <olly@survex.com>

	* Removed assorted references to pthread locking; updated HACKING.

Thu May 02 14:15:47 BST 2002  Olly Betts <olly@survex.com>

	* Stripped out OmBatchEnquire stuff, as it's unlikely to get sorted
	  out any time soon, and it can be extracted from CVS when someone
	  wants it.

Thu May 02 13:50:04 BST 2002  Olly Betts <olly@survex.com>

	* Check for bison >= 1.35 in buildall.

Wed May 01 17:39:57 BST 2002  Olly Betts <olly@survex.com>

	* Removed lingering references to Omsee and OpenMuscat.

Wed May 01 16:34:13 BST 2002  Olly Betts <olly@survex.com>

	* Removed unused methods from NetClient (read_data and write_data).

Wed May 01 14:01:12 BST 2002  Olly Betts <olly@survex.com>

	* Added test consistency1 to check matcher optimisations don't
	  result in inconsistent results (i.e. that same matches and
	  weights are returned regardless of size of mset asked for).

Wed May 01 11:48:10 BST 2002  Olly Betts <olly@survex.com>

	* Fixed mismatched tags in todo.xml.

Wed May 01 11:46:42 BST 2002  Olly Betts <olly@survex.com>

	* Updated todo.

Wed May 01 11:40:47 BST 2002  Olly Betts <olly@survex.com>

	* Corrected configure warning message - it's XML::Parser not XML.

Wed May 01 11:34:49 BST 2002  Olly Betts <olly@survex.com>

	* Tweaks to get queryparser building cleanly.

Tue Apr 30 17:44:48 BST 2002  Olly Betts <olly@survex.com>

	* Updated query parser in extra from the updated one in omega,
	  and fettled it to cope better with multiple instantiations
	  (though it's a long way from being reentrant at the moment).

Tue Apr 30 11:03:44 BST 2002  Olly Betts <olly@survex.com>