@@ -358,24 +358,24 @@ exact termfrequency for the combined term to calculate the weight.  This will
 share some techniques from implementing synonym postlists.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="" area="" release="">
+<todoitem priority=" " difficulty="" owner="" area="" release="">
 
 "make install" on omega should install CGI binary somewhere more helpful
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 .deb and RPMs built, control files via autoconf
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 largefiles should get a better autoconf check?
 Propose: move to require autoconf >= 2.50 in the medium term as it includes
 better largefile checks, and should resolve this.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Sam/James" area="" release="">
+<todoitem priority=" " difficulty="" owner="Sam/James" area="" release="">
 
 Language bindings: Python, PHP and Java (as a minimum IMHO).
 All can be done using SWIG, and it's probably easier to do so
@@ -383,17 +383,17 @@ even though some languages (eg Python) have better tools
 available just because it's less overall work.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="" area="" release="">
+<todoitem priority=" " difficulty="" owner="" area="" release="">
 
 indexgraph -> extra (needs to build as a support library?)
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Reduce use of STL in API; Olly has a plan for std::string
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="" area="" release="">
+<todoitem priority=" " difficulty="" owner="" area="" release="">
 
 Should Omega have a make static target?  Or just document configure runes?
 Need some more stuff in
@@ -402,7 +402,7 @@ fields as standard, and probably support for subsite as key for
 collapse.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Sam" area="" release="">
+<todoitem priority=" " difficulty="" owner="Sam" area="" release="">
 
 Replace Omega with a simpler PHP or Python-based
 system, once the bindings are in place. Python would be good
@@ -418,7 +418,7 @@ to deal with that, which can be done in the bindings although it's
 a little fiddly in some languages I believe.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Fix up examples and make sure they are actually instructive.
 I've made a start.  delve is a reasonable example.  msearch probably needs
@@ -426,39 +426,39 @@ simplifying to just do a probabilistic search, or to use the omega queryparser
 once it moves into extra.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Investigate and find a proper fix for FILTER problem.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Richard" area="" release="">
+<todoitem priority=" " difficulty="" owner="Richard" area="" release="">
 
 Look at replacing btree implementation, or at least tidying it
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Need to ensure getopt.c and getopt1.c get linked against
 anything that needs them for non-glibc platforms.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 Automated testing across CF machines
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 I have some fixes for linux/alpha build, but they're somewhere in a
 pile of paper on my desk. I'll dig them out and test at some point
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 Update the PLATFORMS file
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="" area="" release="">
+<todoitem priority=" " difficulty="" owner="" area="" release="">
 
 We talked about use of local vs global databases, and decided it
 would be useful to support Unix sockets for local machine databases
@@ -469,23 +469,23 @@ by the application, not the library - but at some point should be
 thought through and documented properly.  A longer term project.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 xapian.org: schema pages (not crucial, but would be nice)
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 make sure the non-autogenerated docs are actually correct at the moment
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Use valgrind in the testsuite - waiting for Julian Seward to add the hooks
 needed.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Replace all uses of OmSettings.
 The arguments for OmSettings are not as compelling as we
@@ -500,12 +500,12 @@ than being a special case.  Backends can be done similarly, though an
 explicit factory is needed as there's more than one class to build.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="James" area="" release="">
+<todoitem priority=" " difficulty="" owner="James" area="" release="">
 
 Get nightly snapshot builds set up again
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Look at getting the btree code to use pread and pwrite or similar calls 
 where available (e.g. on Linux and Solaris).  These combine a seek and
@@ -513,18 +513,18 @@ read or write into a single syscall, which halves the syscall overhead and
 can make an observable difference to performance.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Think about using hashing instead of a btree for the backend?  Long term
 project.
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Move "min_hits" into matcher?
 
 </todoitem>
-<todoitem priority="" difficulty="" owner="Olly" area="" release="">
+<todoitem priority=" " difficulty="" owner="Olly" area="" release="">
 
 Look at reworking StatsGatherer mechanism to be simpler and clearer.
 
